--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="form-column">
         <div class="container">
           <h1 class="title">Konverter QRIS Statis ke Dinamis</h1>
-          <p class="subtitle">©LeixCode</p>
+          <p class="subtitle">© By Barikk</p>
 
           <div class="qris-input">
             <label for="qrisImageInput" class="qris-input__upload custom-file-upload">
